<resources>
    <string name="app_name">RDE Stock Taking</string>
    <string name="label_scan_location">Scan Location</string>
    <string name="label_scan_barcode">Scan Barcode</string>
    <string name="label_scan_qty">Input Quantity</string>
    <string name="label_sku">Add\nSKU</string>
    <string name="hard_enter">Hard Enter Key</string>
    <string name="default_one">Default 1</string>
    <string name="lock_loc">Lock Loc</string>
    <string name="save_data">Save Data</string>
    <string name="share_data">Share Data</string>
    <string name="clear_data">Clear List</string>
    <string name="label_location">Location</string>
    <string name="label_barcode">Barcode</string>
    <string name="label_qty">Qty</string>
    <string name="view_list">View List</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="about">About</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="list_activity_label">RDE Stock Taking - Barcode List</string>
    <string name="about_text">Please see <a href="http://www.example.com">http://www.example.com</a>.\nEmail support at support@example.com.</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>